# VizWiz-VQA-Grounding

./: .gitignore  IoU.py  config.yml  countnum.py  dataset.py  eval.py  metrics.py  predict_save.py  pyproject.toml  seq_train.py  train.py  visualize_predictions.py
models/: concat.py  image_encoder.py  mask_decoder.py  model.py
